--- a/index.css
+++ b/index.css
@@ -1,10 +1,11 @@
 body,
 html {
+
     height: 100vh;
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    /* font-family: 'Montserrat', sans-serif; */
+    font-family: 'Montserrat', sans-serif;
     position: relative;
     overflow: hidden;
 }
@@ -43,6 +44,8 @@ html {
 
 .main
 {
+    width: 2020px;
+    height: 1797px;
     background: grey;
     margin-top: 58px;
     height: 100vh;
@@ -53,32 +56,35 @@ html {
 .learn 
 {
 
-    width: 1180.67px;
-    height: 1851px;
-    margin-top: 40px;
-    justify-content: space-around;
-    flex-wrap: wrap;
-    background: hsla(0, 0%, 100%, 1);
-    top: 8%;
+    position: relative;
+    top: 50px;
     left: 4%;
-    margin-right: 100px;
-    margin-left: 123px; 
+    width: 92%;
+    /* height: calc(100vh - 100px); */
+    padding: 40px;
+    box-sizing: border-box;
+
+    border-radius: 15px;
+  
+    background-color: white;
+    box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.3);
  
 }
 
 .learn > h3 
 {
-    font-size: 30px;
-    color: #2F2E50;
-    font-family: 'Roboto', sans-serif;
-    font-weight: 600;
-    margin-left: 37%;
+    margin-left: 37.5%;
     margin-top: 10px;
+    font-size: 3rem;
+    /* color: #E96266; */
+    font-family: 'Noto Sans', sans-serif;
+    font-weight: 700;
+    align-self: center;
 }
 
 .learn >p
 {
-    font-size: 18px;
+    font-size: 1.5rem;
     color: hsla(242, 16%, 31%, 1);
     font-family: 'Roboto', sans-serif;
     font-weight: 500;
@@ -90,24 +96,72 @@ html {
     text-align: center;
 
 }
+/* 
+.flex {
+    display: flex;
+    align-items: center;
+    max-height: 65vh;
+    height: 100%;
+} */
 
-#line
-{
-    margin-left: 106px;
+.container {
+    display: flex;
+  }
+
+  .container > div {
+      margin-top: 32.42px;
+    flex: 1; /*grow*/
+  }
+
+  #photo2{
+    margin-right: 22px;
+    /* width: 90%; */
+    height: auto;
+  }
+
+  #photo1{
+    /* margin-right: 22px; */
+    /* width: 90%; */
+    height: auto;
+  }
+
+   #photo3{
+    /* margin-right: 22px; */
+    /* width: 90%; */
+    height: auto;
+  }
+
+  .container2 {
+    display: flex;
+  }
+
+  .container2 > div {
+    font-size: 2rem;
+    text-align: center;
+    /* margin-left: 20%;   */
+    margin-top: 15.42px;
+  flex: 1; /*grow*/
 }
 
-#traffic
-{
-    float: left;
-    width: 25%;
-    margin-left: 10%; 
-
+.theme-button{
+    margin-left: 44%;
+    margin-top: 61.1px;
 }
 
-#walk 
-{
-    
-    width: 295px;
-    margin-left: 5%; 
-    height: 295px;
+.theme-button >a {
+    background: #2F2E50;
+    font-family: 'Noto sans', sans-serif;
+    color: white;
+    text-decoration: none;
+    overflow: auto;
+    font-weight: 600;
+    font-size: 1.3rem;
+    padding: 15px 80px;
 }
+
+
+
+
+
+
+
