--- a/index.css
+++ b/index.css
@@ -1,101 +1,95 @@
 body,
 html {
 
-    height: 100vh;
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    font-family: 'Montserrat', sans-serif;
-    position: relative;
-    overflow: hidden;
+  height: 100vh;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  font-family: 'Montserrat', sans-serif;
+  position: relative;
+  overflow: hidden;
 }
 
 
-.navbar 
-{
-    position: fixed;
-    width: 100%;
-    top: 0;
-    left: 0;
-    z-index: 1;
-    height: 58px;
-    box-shadow: -4px 2px 16px -9px;
-    background: #2F2E50;
+.navbar {
+  position: fixed;
+  width: 100%;
+  top: 0;
+  left: 0;
+  z-index: 1;
+  height: 58px;
+  box-shadow: -4px 2px 16px -9px;
+  background: #2F2E50;
 }
 
-#road-safety-logo
-{
-    float: left;
-    width: 209px;
-    height: 38px;
-    margin-top: 10px;
+#road-safety-logo {
+  float: left;
+  width: 209px;
+  height: 38px;
+  margin-top: 10px;
 }
 
-.navbar > p 
-{
-    color: #FFFFFF;
-    margin-left: 38%;
-    margin-top: 18px;
-    font-family: 'Roboto', sans-serif;;
-    font-size: 23px;
-    text-transform: uppercase;
-    word-spacing: 2px;
+.navbar>p {
+  color: #FFFFFF;
+  margin-left: 38%;
+  margin-top: 18px;
+  font-family: 'Roboto', sans-serif;
+  ;
+  font-size: 23px;
+  text-transform: uppercase;
+  word-spacing: 2px;
 }
 
-.main
-{
-    width: 2020px;
-    height: 1797px;
-    background: grey;
-    margin-top: 58px;
-    height: 100vh;
-    width: 100vw;
-    overflow: scroll;
+.main {
+  width: 2020px;
+  height: 1797px;
+  background: grey;
+  margin-top: 58px;
+  height: 100vh;
+  width: 100vw;
+  overflow: scroll;
 }
 
-.learn 
-{
+.learn {
 
-    position: relative;
-    top: 50px;
-    left: 4%;
-    width: 92%;
-    /* height: calc(100vh - 100px); */
-    padding: 40px;
-    box-sizing: border-box;
-
-    border-radius: 15px;
-  
-    background-color: white;
-    box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.3);
- 
-}
-
-.learn > h3 
-{
-    margin-left: 37.5%;
-    margin-top: 10px;
-    font-size: 3rem;
-    /* color: #E96266; */
-    font-family: 'Noto Sans', sans-serif;
-    font-weight: 700;
-    align-self: center;
-}
-
-.learn >p
-{
-    font-size: 1.5rem;
-    color: hsla(242, 16%, 31%, 1);
-    font-family: 'Roboto', sans-serif;
-    font-weight: 500;
-    border: 2px solid goldenrod;
-    width: 83%;
-    height: 5%;
-    margin-left: 115px;
-    margin-right: 90px;
-    text-align: center;
+  position: relative;
+  top: 50px;
+  left: 8%;
+  width: 85%;
+  bottom: 10%;
+  /* height: calc(100vh - 100px); */
+  height: auto;
+  padding: 40px;
+  box-sizing: border-box;
+  background-color: white;
+  box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.3);
 
 }
+
+.learn>h3 {
+  margin-left: 37.5%;
+  margin-top: 10px;
+  font-size: 3rem;
+  /* color: #E96266; */
+  font-family: 'Noto Sans', sans-serif;
+  font-weight: 700;
+  align-self: center;
+}
+
+.learn>p {
+  font-size: 1.5rem;
+  color: hsla(242, 16%, 31%, 1);
+  font-family: 'Roboto', sans-serif;
+  font-weight: 500;
+  border: 2px solid goldenrod;
+  width: 83%;
+  height: 5%;
+  margin-left: 115px;
+  margin-right: 90px;
+  text-align: center;
+
+}
+
 /* 
 .flex {
     display: flex;
@@ -105,63 +99,154 @@ html {
 } */
 
 .container {
-    display: flex;
-  }
-
-  .container > div {
-      margin-top: 32.42px;
-    flex: 1; /*grow*/
-  }
-
-  #photo2{
-    margin-right: 22px;
-    /* width: 90%; */
-    height: auto;
-  }
-
-  #photo1{
-    /* margin-right: 22px; */
-    /* width: 90%; */
-    height: auto;
-  }
-
-   #photo3{
-    /* margin-right: 22px; */
-    /* width: 90%; */
-    height: auto;
-  }
-
-  .container2 {
-    display: flex;
-  }
-
-  .container2 > div {
-    font-size: 2rem;
-    text-align: center;
-    /* margin-left: 20%;   */
-    margin-top: 15.42px;
-  flex: 1; /*grow*/
+  display: flex;
 }
 
-.theme-button{
-    margin-left: 44%;
-    margin-top: 61.1px;
+.container>div {
+  margin-top: 32.42px;
+  flex: 1;
+  /*grow*/
 }
 
-.theme-button >a {
-    background: #2F2E50;
-    font-family: 'Noto sans', sans-serif;
-    color: white;
-    text-decoration: none;
-    overflow: auto;
-    font-weight: 600;
-    font-size: 1.3rem;
-    padding: 15px 80px;
+#photo2 {
+  margin-right: 22px;
+  width: 70%;
+  height: 282px;
+  margin-left: 7%;
+  margin-top: 7%;
+}
+
+#photo1 {
+  width: 70%;
+  height: auto;
+  margin-left: 8%;
+  margin-top: 7%;
+}
+
+#photo3 {
+  width: 70%;
+  height: auto;
+  margin-left: 7%;
+  margin-top: 7%;
+}
+
+.container2 {
+  display: flex;
+}
+
+.container2>div {
+  font-size: 2rem;
+  text-align: center;
+  /* margin-left: 20%;   */
+  margin-top: 15.42px;
+  flex: 1;
+  /*grow*/
+}
+
+.theme-button {
+  margin-left: 44%;
+  margin-top: 61.1px;
+}
+
+.theme-button>a {
+  background: #2F2E50;
+  font-family: 'Noto sans', sans-serif;
+  color: white;
+  text-decoration: none;
+  overflow: auto;
+  font-weight: 600;
+  font-size: 1.3rem;
+  padding: 15px 80px;
+}
+
+
+footer {
+  display: flex;
+  color: #FFFFFF;
+  background: #2F2E50;
+  width: 100%;
+  height: 60%;
+  margin-top: 6%;
 }
 
 
 
+.contact {
+  margin-left: 132px;
+  margin-top: 32.42px;
+  width: 35%;
+}
+
+.road {
+  margin-right: -187px;
+  margin-top: 62.42px;
+  width: 30%;
+}
+
+.mission {
+  margin-left: 400px;
+  margin-top: 32.42px;
+  width: 37%;
+}
+
+.contact a {
+  word-spacing: 10px;
+}
 
 
 
+#fb {
+  margin-left: 5px;
+}
 
+.road>#fb {
+  margin-left: 10px;
+}
+
+.road>#insta {
+  margin-left: 10px;
+}
+
+.road>#twitter {
+  margin-left: 43px;
+}
+
+#insta {
+  margin-left: 5px;
+}
+
+#footlogo {
+  width: 99%;
+  height: 47%;
+  margin-top: 24px;
+  margin-left: -12%;
+}
+
+.road a {
+  top: 20px;
+}
+
+.mission h2 {
+  margin-right: 10%;
+  margin-left: -20%;
+  margin-top: 28px;
+}
+
+.mission p {
+  font-family: 'Helvetica, regular';
+  font-size: 16px;
+  margin-right: 10%;
+  margin-left: -20%;
+  margin-top: -14px;
+}
+
+.mission img {
+  width: 75%;
+  height: 40%;
+  margin-left: -33%;
+  margin-top: 0%;
+}
+
+.mission a {
+  margin-left: -18%;
+}
