--- a/index.css
+++ b/index.css
@@ -1,15 +1,19 @@
 body,
 html {
-
   height: 100vh;
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Source Sans Pro', sans-serif;
   position: relative;
   overflow: hidden;
+  font-weight: 600;
+  color: #43425d;
 }
 
+img {
+  max-width: 100%;
+}
 
 .navbar {
   position: fixed;
@@ -19,7 +23,7 @@ html {
   z-index: 1;
   height: 58px;
   box-shadow: -4px 2px 16px -9px;
-  background: #2F2E50;
+  background: #2f2e50;
 }
 
 #road-safety-logo {
@@ -30,11 +34,10 @@ html {
 }
 
 .navbar>p {
-  color: #FFFFFF;
+  color: #ffffff;
   margin-left: 38%;
   margin-top: 18px;
   font-family: 'Roboto', sans-serif;
-  ;
   font-size: 23px;
   text-transform: uppercase;
   word-spacing: 2px;
@@ -51,10 +54,9 @@ html {
 }
 
 .learn {
-
   position: relative;
   top: 50px;
-  left: 8%;
+  /* left: 8%; */
   width: 85%;
   bottom: 10%;
   /* height: calc(100vh - 100px); */
@@ -63,31 +65,31 @@ html {
   box-sizing: border-box;
   background-color: white;
   box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.3);
-
+  margin: auto;
 }
 
 .learn>h3 {
-  margin-left: 37.5%;
+  /* margin-left: 33.5%; */
   margin-top: 10px;
   font-size: 3rem;
   /* color: #E96266; */
-  font-family: 'Noto Sans', sans-serif;
+  font-family: 'Source Sans Pro', sans-serif;
   font-weight: 700;
   align-self: center;
+  text-align: center;
+  margin-bottom: 25px;
 }
 
 .learn>p {
-  font-size: 1.5rem;
+  font-size: 1.2rem;
   color: hsla(242, 16%, 31%, 1);
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Source Sans Pro', sans-serif;
   font-weight: 500;
-  border: 2px solid goldenrod;
-  width: 83%;
-  height: 5%;
-  margin-left: 115px;
-  margin-right: 90px;
+  width: 82%;
+  margin: 0 auto 35px;
+  /* margin-left: 86px; */
+  /* margin-right: 90px; */
   text-align: center;
-
 }
 
 /* 
@@ -99,77 +101,95 @@ html {
 } */
 
 .container {
-  display: flex;
+  display: block;
+}
+
+.container.blogs {
+  width: 100%;
+  float: left;
+  clear: both;
 }
 
 .container>div {
   margin-top: 32.42px;
-  flex: 1;
-  /*grow*/
+  display: inline-block;
+  width: 33.33%;
+  float: left;
 }
 
+.container.blogs div {
+  width: 33.33%;
+  float: left;
+  /* padding: 5px; */
+  text-align: center;
+}
+
+.container.blogs img {
+  width: 310px;
+  height: 310px;
+}
+
+/*
 #photo2 {
-  margin-right: 22px;
-  width: 70%;
-  height: 282px;
-  margin-left: 7%;
-  margin-top: 7%;
+	margin-right: 22px;
+	width: 70%;
+	height: 282px;
+	margin-left: 7%;
+	margin-top: 7%;
 }
 
-#photo1 {
-  width: 70%;
-  height: auto;
-  margin-left: 8%;
-  margin-top: 7%;
-}
+ #photo1 {
+	width: 70%;
+	height: auto;
+	margin-left: 8%;
+	margin-top: 7%;
+} 
 
 #photo3 {
-  width: 70%;
-  height: auto;
-  margin-left: 7%;
-  margin-top: 7%;
+	width: 70%;
+	height: auto;
+	margin-left: 7%;
+	margin-top: 7%;
 }
-
+*/
 .container2 {
-  display: flex;
+  display: block;
+  clear: both;
 }
 
 .container2>div {
-  font-size: 2rem;
+  font-size: 1.5rem;
   text-align: center;
-  /* margin-left: 20%;   */
-  margin-top: 15.42px;
+  margin-left: -5%;
+  margin-top: -1.58px;
   flex: 1;
-  /*grow*/
 }
 
 .theme-button {
-  margin-left: 44%;
+  /* margin-left: 33%; */
   margin-top: 61.1px;
+  text-align: center;
 }
 
 .theme-button>a {
-  background: #2F2E50;
-  font-family: 'Noto sans', sans-serif;
+  background: #2f2e50;
+  font-family: 'Source Sans Pro', sans-serif;
   color: white;
   text-decoration: none;
   overflow: auto;
   font-weight: 600;
   font-size: 1.3rem;
-  padding: 15px 80px;
+  padding: 10px 140px;
 }
-
 
 footer {
   display: flex;
-  color: #FFFFFF;
-  background: #2F2E50;
+  color: #ffffff;
+  background: #2f2e50;
   width: 100%;
   height: 60%;
   margin-top: 6%;
 }
-
-
 
 .contact {
   margin-left: 132px;
@@ -192,8 +212,6 @@ footer {
 .contact a {
   word-spacing: 10px;
 }
-
-
 
 #fb {
   margin-left: 5px;
@@ -249,4 +267,90 @@ footer {
 
 .mission a {
   margin-left: -18%;
+}
+
+@media and screen(min-width:1448px) {
+  #photo2 {
+    height: 220px;
+  }
+}
+
+
+
+
+
+@media (max-width:767px) {
+
+  .navbar>p {
+    margin-left: 13px;
+    font-size: 14px;
+    display: block;
+    margin-top: 63px;
+  }
+
+  .learn>h3 {
+    margin-top: 0;
+    font-size: 1.5rem;
+  }
+
+  .learn {
+    padding: 15px;
+    width: 95%;
+  }
+
+  .learn>p {
+    width: 100%;
+  }
+
+  .container.blogs div {
+    width: 100%;
+    margin-top: 0;
+  }
+
+  .container.blogs img {
+    width: 100%;
+    height: auto;
+  }
+
+  .theme-button {
+    /* margin-left: 33%; */
+    margin: 18.1px 0 15px 0;
+    text-align: center;
+  }
+
+  .theme-button>a {
+    padding: 10px 60px;
+  }
+
+  .contact {
+    margin-left: 0px;
+    margin-top: 32.42px;
+    width: 100%;
+    padding: 20px;
+  }
+
+  footer {
+    display: block;
+  }
+
+  .road {
+    margin-right: 0;
+    margin-top: 62.42px;
+    width: 100%;
+    padding: 0px 5px;
+  }
+
+  #footlogo {
+    width: auto;
+    height: auto;
+    margin-top: 24px;
+    margin-left: 4px;
+    max-width: 95%;
+  }
+
+
+
+
+
+
 }
